force-app/main/default/objects/property_parcel_polygons__x/property_parcel_polygons__x.object-meta.xml
<CustomObject>
    <description>property-parcel-polygons</description>
    <externalDataSource>Vancouver_Parcel</externalDataSource>
    <externalName>property-parcel-polygons</externalName>
    <label>property-parcel-polygons</label>
    <pluralLabel>property-parcel-polygons</pluralLabel>
</CustomObject>