force-app/main/default/objects/property_parcel_polygons__x/fields/civic_numb__c.field-meta.xml
<CustomField>
    <fullName>civic_numb__c</fullName>
    <externalDeveloperName>civic_numb</externalDeveloperName>
    <label>civic_numb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>