force-app/main/default/objects/property_parcel_polygons__x/fields/globalid__c.field-meta.xml
<CustomField>
    <fullName>globalid__c</fullName>
    <externalDeveloperName>globalid</externalDeveloperName>
    <label>globalid</label>
    <length>38</length>
    <type>Text</type>
</CustomField>