force-app/main/default/objects/property_parcel_polygons__x/fields/objectid__c.field-meta.xml
<CustomField>
    <fullName>objectid__c</fullName>
    <externalDeveloperName>objectid</externalDeveloperName>
    <label>OBJECTID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>