force-app/main/default/objects/property_parcel_polygons__x/fields/site_id__c.field-meta.xml
<CustomField>
    <fullName>site_id__c</fullName>
    <externalDeveloperName>site_id</externalDeveloperName>
    <label>site_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>