force-app/main/default/objects/property_parcel_polygons__x/fields/streetname__c.field-meta.xml
<CustomField>
    <fullName>streetname__c</fullName>
    <externalDeveloperName>streetname</externalDeveloperName>
    <label>streetname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>