force-app/main/default/objects/property_parcel_polygons__x/fields/tax_coord__c.field-meta.xml
<CustomField>
    <fullName>tax_coord__c</fullName>
    <externalDeveloperName>tax_coord</externalDeveloperName>
    <label>tax_coord</label>
    <length>255</length>
    <type>Text</type>
</CustomField>